@@ -12,6 +12,7 @@ my $builder = Module::Build->new(
     {
         'Encode' => '0',
         'Digest::MD5' => '0',
+        'perl' => '5.006',
         'XML::Parser' => '0',
     },
     add_to_cleanup      => [ 'XML-SemanticDiff-*' ],
