@@ -1,6 +1,8 @@
 package XML::SemanticDiff;
 
 use strict;
+use warnings;
+
 use vars qw/$VERSION/;
 
 $VERSION = '0.97';
